# defensive_programming_lesson

./: .pylintrc  Makefile  README.md  conftest.py  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
module_1_eafp_vs_lbyl/: assignment_a.py  assignment_b.py  extra_exercises.md  learning_path.md  starter_example.py  test_assignment_a.py  test_assignment_b.py  test_starter_example.py
module_2_invariants_assertions/: assignment_a.py  assignment_b.py  extra_exercises.md  learning_path.md  starter_example.py  test_assignment_a.py  test_assignment_b.py  test_starter_example.py
module_3_exceptions_hierarchy/: assignment_a.py  assignment_b.py  extra_exercises.md  learning_path.md  starter_example.py  test_assignment_a.py  test_assignment_b.py  test_starter_example.py
module_4_design_by_contract/: assignment_a.py  assignment_b.py  extra_exercises.md  learning_path.md  starter_example.py  test_assignment_a.py  test_assignment_b.py  test_starter_example.py
module_5_sentinel_values_logging/: assignment_a.py  assignment_b.py  extra_exercises.md  learning_path.md  starter_example.py  test_assignment_a.py  test_assignment_b.py  test_starter_example.py
